--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-9.4.0.jar=D:\\5  CICLO\\DESARROLLO DE SERVICIOS WEB\\CONECTOR\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
+file.reference.mysql-connector-j-9.4.0.jar=D:\\5  CICLO\\DESARROLLO DE SERVICIOS WEB MIERCOLES\\CONECTOR\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
